[Feat] Updates, add caching

--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,5 +1,5 @@
 {
-    "A reset link will be sent if the account exists.": "",
+    "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
     "About me": "O mnie",
     "Back to all posts": "Wróć do wszystkich postów",
     "Featured Articles": "Artykuły wyróżnione",
