[Feat] Add locales

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,24 +1,65 @@
 {
-    "A reset link will be sent if the account exists.": "",
-    "About me": "Über mich",
+    "A reset link will be sent if the account exists.": "Ein Reset-Link wird gesendet, wenn das Konto existiert.",
+    "About me": "Über mich",
+    "Author": "Autor",
     "Back to all posts": "Zurück zu allen Beiträgen",
+    "Categories": "Kategorien",
+    "Category": "Kategorie",
+    "Confirm Password": "Passwort bestätigen",
+    "Contact Me": "",
+    "Copy link": "Link kopieren",
+    "Create Category": "",
+    "Dark": "Dunkel",
+    "Dashboard": "Dashboard",
+    "Email": "E-Mail",
+    "Enter your email": "",
     "Featured Articles": "Ausgewählte Artikel",
+    "Forgot your password?": "Passwort vergessen?",
+    "Get notified about new articles and resources on PHP development and DevOps practices": "",
+    "I respect your privacy. Unsubscribe at any time": "",
     "Latest": "Neueste",
+    "Light": "Hell",
+    "Link copied!": "Link kopiert!",
+    "Login": "Anmelden",
+    "Logout": "Abmelden",
+    "Name": "Name",
     "Next": "Nächster",
     "No posts found": "Keine Beiträge gefunden",
     "Oldest": "Älteste",
     "Page": "Seite",
+    "Password": "Passwort",
     "Previous": "Vorheriger",
+    "Professional Journey": "",
+    "Profile": "Profil",
+    "Published at": "Veröffentlicht am",
     "Read more": "Mehr lesen",
     "Read the Blog": "Blog lesen",
+    "Register": "Registrieren",
+    "Related posts": "Ähnliche Beiträge",
+    "Remember me": "Angemeldet bleiben",
+    "Reset Password": "Passwort zurücksetzen",
+    "Search": "Suchen",
     "Search posts...": "Beiträge suchen...",
+    "Send Password Reset Link": "Link zum Zurücksetzen des Passworts senden",
+    "Settings": "Einstellungen",
+    "Share": "Teilen",
     "Sort by": "Sortieren nach",
+    "Stay Updated": "",
+    "Subscribe": "",
+    "System": "System",
+    "Tag": "Tag",
+    "Tags": "Tags",
+    "Technical Skills": "",
     "Title A-Z": "Titel A-Z",
     "Title Z-A": "Titel Z-A",
-    "auth.failed": "",
-    "auth.password": "",
-    "auth.throttle": "",
-    "comment": "",
+    "Toggle navigation": "Navigation umschalten",
+    "Toggle theme": "Theme umschalten",
+    "Updated at": "Aktualisiert am",
+    "View all": "",
+    "auth.failed": "Diese Anmeldeinformationen stimmen nicht mit unseren Aufzeichnungen überein.",
+    "auth.password": "Das eingegebene Passwort ist falsch.",
+    "auth.throttle": "Zu viele Anmeldeversuche. Bitte versuchen Sie es in :seconds Sekunden erneut.",
+    "comment": "Kommentar",
     "comments": "Kommentare",
     "min read": "min. Lesezeit",
     "of": "von"
