--- a/lang/en.json
+++ b/lang/en.json
@@ -2,19 +2,29 @@
     "A reset link will be sent if the account exists.": "A reset link will be sent if the account exists.",
     "About me": "About me",
     "Back to all posts": "Back to all posts",
+    "Contact Me": "Contact Me",
+    "Create Category": "Create Category",
+    "Enter your email": "Enter your email",
     "Featured Articles": "Featured Articles",
+    "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
+    "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "Latest": "Latest",
     "Next": "Next",
     "No posts found": "No posts found",
     "Oldest": "Oldest",
     "Page": "Page",
     "Previous": "Previous",
+    "Professional Journey": "Professional Journey",
     "Read more": "Read more",
     "Read the Blog": "Read the Blog",
     "Search posts...": "Search posts...",
     "Sort by": "Sort by",
+    "Stay Updated": "Stay Updated",
+    "Subscribe": "Subscribe",
+    "Technical Skills": "Technical Skills",
     "Title A-Z": "Title A-Z",
     "Title Z-A": "Title Z-A",
+    "View all": "View all",
     "auth.failed": "auth.failed",
     "auth.password": "auth.password",
     "auth.throttle": "auth.throttle",
