--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,24 +1,65 @@
 {
     "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
     "About me": "O mnie",
+    "Author": "Autor",
     "Back to all posts": "Wróć do wszystkich postów",
+    "Categories": "Kategorie",
+    "Category": "Kategoria",
+    "Confirm Password": "Potwierdź hasło",
+    "Contact Me": "",
+    "Copy link": "Kopiuj link",
+    "Create Category": "Stwórz kategorię",
+    "Dark": "Ciemny",
+    "Dashboard": "Panel",
+    "Email": "Email",
+    "Enter your email": "",
     "Featured Articles": "Artykuły wyróżnione",
+    "Forgot your password?": "Zapomniałeś hasła?",
+    "Get notified about new articles and resources on PHP development and DevOps practices": "",
+    "I respect your privacy. Unsubscribe at any time": "",
     "Latest": "Najnowsze",
+    "Light": "Jasny",
+    "Link copied!": "Link skopiowany!",
+    "Login": "Zaloguj się",
+    "Logout": "Wyloguj się",
+    "Name": "Imię",
     "Next": "Następna",
     "No posts found": "Nie znaleziono żadnych postów",
     "Oldest": "Najstarsze",
     "Page": "Strona",
+    "Password": "Hasło",
     "Previous": "Poprzednia",
+    "Professional Journey": "",
+    "Profile": "Profil",
+    "Published at": "Opublikowano",
     "Read more": "Czytaj więcej",
     "Read the Blog": "Czytaj bloga",
+    "Register": "Zarejestruj się",
+    "Related posts": "Powiązane posty",
+    "Remember me": "Zapamiętaj mnie",
+    "Reset Password": "Zresetuj hasło",
+    "Search": "Szukaj",
     "Search posts...": "Szukaj postów...",
+    "Send Password Reset Link": "Wyślij link resetujący hasło",
+    "Settings": "Ustawienia",
+    "Share": "Udostępnij",
     "Sort by": "Sortuj według",
+    "Stay Updated": "",
+    "Subscribe": "",
+    "System": "Systemowy",
+    "Tag": "Tag",
+    "Tags": "Tagi",
+    "Technical Skills": "",
     "Title A-Z": "Tytuł A-Z",
     "Title Z-A": "Tytuł Z-A",
-    "auth.failed": "",
-    "auth.password": "",
-    "auth.throttle": "",
-    "comment": "",
+    "Toggle navigation": "Przełącz nawigację",
+    "Toggle theme": "Przełącz motyw",
+    "Updated at": "Zaktualizowano",
+    "View all": "",
+    "auth.failed": "Błędne dane logowania.",
+    "auth.password": "Podane hasło jest nieprawidłowe.",
+    "auth.throttle": "Za dużo prób logowania. Spróbuj ponownie za :seconds sekund.",
+    "comment": "komentarz",
     "comments": "Komentarze",
     "min read": "min. czytania",
     "of": "z"
