--- a/lang/de.json
+++ b/lang/de.json
@@ -1,10 +1,15 @@
 {
     "A reset link will be sent if the account exists.": "Ein Reset-Link wird gesendet, wenn das Konto existiert.",
     "About me": "Über mich",
+    "Appearance": "",
     "Author": "Autor",
+    "Back to all Categories": "",
     "Back to all posts": "Zurück zu allen Beiträgen",
     "Categories": "Kategorien",
     "Category": "Kategorie",
+    "Category created successfully": "",
+    "Category deleted successfully": "",
+    "Category updated successfully": "",
     "Confirm Password": "Passwort bestätigen",
     "Contact Me": "",
     "Copy link": "Link kopieren",
@@ -16,10 +21,12 @@
     "Featured Articles": "Ausgewählte Artikel",
     "Forgot your password?": "Passwort vergessen?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "",
+    "Home": "",
     "I respect your privacy. Unsubscribe at any time": "",
     "Latest": "Neueste",
     "Light": "Hell",
     "Link copied!": "Link kopiert!",
+    "Log out": "",
     "Login": "Anmelden",
     "Logout": "Abmelden",
     "Name": "Name",
@@ -27,6 +34,7 @@
     "No posts found": "Keine Beiträge gefunden",
     "Oldest": "Älteste",
     "Page": "Seite",
+    "Panel": "",
     "Password": "Passwort",
     "Previous": "Vorheriger",
     "Professional Journey": "",
