--- a/lang/en.json
+++ b/lang/en.json
@@ -1,20 +1,31 @@
 {
     "A reset link will be sent if the account exists.": "A reset link will be sent if the account exists.",
     "About me": "About me",
+    "Appearance": "Appearance",
+    "Back to all Categories": "Back to all Categories",
     "Back to all posts": "Back to all posts",
+    "Categories": "Categories",
+    "Category created successfully": "Category created successfully",
+    "Category deleted successfully": "Category deleted successfully",
+    "Category updated successfully": "Category updated successfully",
     "Contact Me": "Contact Me",
     "Create Category": "Create Category",
     "Enter your email": "Enter your email",
     "Featured Articles": "Featured Articles",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
+    "Home": "Home",
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "Latest": "Latest",
+    "Log out": "Log out",
     "Next": "Next",
     "No posts found": "No posts found",
     "Oldest": "Oldest",
     "Page": "Page",
+    "Panel": "Panel",
+    "Password": "Password",
     "Previous": "Previous",
     "Professional Journey": "Professional Journey",
+    "Profile": "Profile",
     "Read more": "Read more",
     "Read the Blog": "Read the Blog",
     "Search posts...": "Search posts...",
