--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,10 +1,15 @@
 {
     "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
     "About me": "O mnie",
+    "Appearance": "",
     "Author": "Autor",
+    "Back to all Categories": "Wróć do wszystkich kategorii",
     "Back to all posts": "Wróć do wszystkich postów",
     "Categories": "Kategorie",
     "Category": "Kategoria",
+    "Category created successfully": "",
+    "Category deleted successfully": "",
+    "Category updated successfully": "",
     "Confirm Password": "Potwierdź hasło",
     "Contact Me": "",
     "Copy link": "Kopiuj link",
@@ -16,10 +21,12 @@
     "Featured Articles": "Artykuły wyróżnione",
     "Forgot your password?": "Zapomniałeś hasła?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "",
+    "Home": "",
     "I respect your privacy. Unsubscribe at any time": "",
     "Latest": "Najnowsze",
     "Light": "Jasny",
     "Link copied!": "Link skopiowany!",
+    "Log out": "",
     "Login": "Zaloguj się",
     "Logout": "Wyloguj się",
     "Name": "Imię",
@@ -27,6 +34,7 @@
     "No posts found": "Nie znaleziono żadnych postów",
     "Oldest": "Najstarsze",
     "Page": "Strona",
+    "Panel": "",
     "Password": "Hasło",
     "Previous": "Poprzednia",
     "Professional Journey": "",
