[Feat] Update routes

--- a/lang/en.json
+++ b/lang/en.json
@@ -10,6 +10,7 @@
     "Category updated successfully": "Category updated successfully",
     "Contact Me": "Contact Me",
     "Create Category": "Create Category",
+    "Create Post": "Create Post",
     "Enter your email": "Enter your email",
     "Featured Articles": "Featured Articles",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
@@ -23,6 +24,7 @@
     "Page": "Page",
     "Panel": "Panel",
     "Password": "Password",
+    "Posts": "Posts",
     "Previous": "Previous",
     "Professional Journey": "Professional Journey",
     "Profile": "Profile",
@@ -32,6 +34,7 @@
     "Sort by": "Sort by",
     "Stay Updated": "Stay Updated",
     "Subscribe": "Subscribe",
+    "Tags": "Tags",
     "Technical Skills": "Technical Skills",
     "Title A-Z": "Title A-Z",
     "Title Z-A": "Title Z-A",
