--- a/lang/de.json
+++ b/lang/de.json
@@ -14,6 +14,7 @@
     "Contact Me": "",
     "Copy link": "Link kopieren",
     "Create Category": "",
+    "Create Post": "",
     "Dark": "Dunkel",
     "Dashboard": "Dashboard",
     "Email": "E-Mail",
@@ -36,6 +37,7 @@
     "Page": "Seite",
     "Panel": "",
     "Password": "Passwort",
+    "Posts": "",
     "Previous": "Vorheriger",
     "Professional Journey": "",
     "Profile": "Profil",
