--- a/lang/pl.json
+++ b/lang/pl.json
@@ -14,6 +14,7 @@
     "Contact Me": "",
     "Copy link": "Kopiuj link",
     "Create Category": "Stwórz kategorię",
+    "Create Post": "",
     "Dark": "Ciemny",
     "Dashboard": "Panel",
     "Email": "Email",
@@ -36,6 +37,7 @@
     "Page": "Strona",
     "Panel": "",
     "Password": "Hasło",
+    "Posts": "",
     "Previous": "Poprzednia",
     "Professional Journey": "",
     "Profile": "Profil",
