--- a/lang/de.json
+++ b/lang/de.json
@@ -1,22 +1,35 @@
 {
     "A reset link will be sent if the account exists.": "Ein Reset-Link wird gesendet, wenn das Konto existiert.",
     "About me": "Über mich",
-    "Appearance": "",
+    "Actions": "Aktionen",
+    "Appearance": "Aussehen",
+    "Are you sure?": "Bist du sicher?",
     "Author": "Autor",
-    "Back to all Categories": "",
+    "Back to all Categories": "Zurück zu allen Kategorien",
+    "Back to all Tags": "Zurück zu allen Tags",
     "Back to all posts": "Zurück zu allen Beiträgen",
+    "Blog Categories": "Blog-Kategorien",
+    "Blog Posts": "Blog-Beiträge",
+    "Blog Tags": "Blog-Tags",
+    "Cancel": "Abbrechen",
     "Categories": "Kategorien",
     "Category": "Kategorie",
+    "Category created successfully": "Kategorie erfolgreich erstellt",
+    "Category deleted successfully": "Kategorie erfolgreich gelöscht",
     "Category created successfully": "",
     "Category deleted successfully": "",
     "Category updated successfully": "",
     "Confirm Password": "Passwort bestätigen",
     "Contact Me": "",
+    "Content": "",
     "Copy link": "Link kopieren",
     "Create Category": "",
     "Create Post": "",
+    "Create Tag": "",
+    "Created": "",
     "Dark": "Dunkel",
     "Dashboard": "Dashboard",
+    "Delete": "",
     "Email": "E-Mail",
     "Enter your email": "",
     "Featured Articles": "Ausgewählte Artikel",
@@ -30,17 +43,23 @@
     "Log out": "",
     "Login": "Anmelden",
     "Logout": "Abmelden",
+    "Manage Categories": "",
+    "Manage Posts": "",
+    "Manage Tags": "",
     "Name": "Name",
     "Next": "Nächster",
     "No posts found": "Keine Beiträge gefunden",
+    "No tags found": "",
     "Oldest": "Älteste",
     "Page": "Seite",
     "Panel": "",
     "Password": "Passwort",
+    "Pick a date": "",
     "Posts": "",
     "Previous": "Vorheriger",
     "Professional Journey": "",
     "Profile": "Profil",
+    "Publish at": "",
     "Published at": "Veröffentlicht am",
     "Read more": "Mehr lesen",
     "Read the Blog": "Blog lesen",
@@ -48,24 +67,34 @@
     "Related posts": "Ähnliche Beiträge",
     "Remember me": "Angemeldet bleiben",
     "Reset Password": "Passwort zurücksetzen",
+    "Save Category": "",
+    "Save Post": "",
+    "Save Tag": "",
     "Search": "Suchen",
     "Search posts...": "Beiträge suchen...",
+    "Select a category": "",
     "Send Password Reset Link": "Link zum Zurücksetzen des Passworts senden",
     "Settings": "Einstellungen",
     "Share": "Teilen",
     "Sort by": "Sortieren nach",
+    "Status": "",
     "Stay Updated": "",
     "Subscribe": "",
     "System": "System",
     "Tag": "Tag",
     "Tags": "Tags",
     "Technical Skills": "",
+    "This action cannot be undone. This will permanently delete this category.": "",
+    "This action cannot be undone. This will permanently delete this post.": "",
+    "This action cannot be undone. This will permanently delete this tag.": "",
+    "Title": "",
     "Title A-Z": "Titel A-Z",
     "Title Z-A": "Titel Z-A",
     "Toggle navigation": "Navigation umschalten",
     "Toggle theme": "Theme umschalten",
     "Updated at": "Aktualisiert am",
     "View all": "",
+    "You have not created any tags yet.": "",
     "auth.failed": "Diese Anmeldeinformationen stimmen nicht mit unseren Aufzeichnungen überein.",
     "auth.password": "Das eingegebene Passwort ist falsch.",
     "auth.throttle": "Zu viele Anmeldeversuche. Bitte versuchen Sie es in :seconds Sekunden erneut.",
