--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,46 +1,63 @@
 {
     "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
     "About me": "O mnie",
-    "Appearance": "",
+    "Actions": "Akcje",
+    "Appearance": "Wygląd",
+    "Are you sure?": "Jesteś pewien?",
     "Author": "Autor",
     "Back to all Categories": "Wróć do wszystkich kategorii",
+    "Back to all Tags": "Wróć do wszystkich tagów",
     "Back to all posts": "Wróć do wszystkich postów",
+    "Blog Categories": "Kategorie bloga",
+    "Blog Posts": "Posty na blogu",
+    "Blog Tags": "Tagi bloga",
+    "Cancel": "Anuluj",
     "Categories": "Kategorie",
     "Category": "Kategoria",
-    "Category created successfully": "",
-    "Category deleted successfully": "",
-    "Category updated successfully": "",
+    "Category created successfully": "Kategoria została pomyślnie utworzona",
+    "Category deleted successfully": "Kategoria została pomyślnie usunięta",
+    "Category updated successfully": "Kategoria została pomyślnie zaktualizowana",
     "Confirm Password": "Potwierdź hasło",
     "Contact Me": "",
+    "Content": "",
     "Copy link": "Kopiuj link",
     "Create Category": "Stwórz kategorię",
-    "Create Post": "",
+    "Create Post": "Stwórz post",
+    "Create Tag": "Stwórz tag",
+    "Created": "",
     "Dark": "Ciemny",
     "Dashboard": "Panel",
+    "Delete": "Usuń",
     "Email": "Email",
     "Enter your email": "",
     "Featured Articles": "Artykuły wyróżnione",
     "Forgot your password?": "Zapomniałeś hasła?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "",
-    "Home": "",
+    "Home": "Strona główna",
     "I respect your privacy. Unsubscribe at any time": "",
     "Latest": "Najnowsze",
     "Light": "Jasny",
     "Link copied!": "Link skopiowany!",
-    "Log out": "",
+    "Log out": "Wyloguj się",
     "Login": "Zaloguj się",
     "Logout": "Wyloguj się",
+    "Manage Categories": "Zarządzaj kategoriami",
+    "Manage Posts": "Zarządzaj postami",
+    "Manage Tags": "Zarządzaj tagami",
     "Name": "Imię",
     "Next": "Następna",
     "No posts found": "Nie znaleziono żadnych postów",
+    "No tags found": "Nie znaleziono tagów",
     "Oldest": "Najstarsze",
     "Page": "Strona",
     "Panel": "",
     "Password": "Hasło",
-    "Posts": "",
+    "Pick a date": "Wybierz datę",
+    "Posts": "Posty",
     "Previous": "Poprzednia",
     "Professional Journey": "",
     "Profile": "Profil",
+    "Publish at": "Opublikuj",
     "Published at": "Opublikowano",
     "Read more": "Czytaj więcej",
     "Read the Blog": "Czytaj bloga",
@@ -48,24 +65,34 @@
     "Related posts": "Powiązane posty",
     "Remember me": "Zapamiętaj mnie",
     "Reset Password": "Zresetuj hasło",
+    "Save Category": "Zapisz kategorię",
+    "Save Post": "Zapisz post",
+    "Save Tag": "Zapisz tag",
     "Search": "Szukaj",
     "Search posts...": "Szukaj postów...",
+    "Select a category": "Wybierz kategorię",
     "Send Password Reset Link": "Wyślij link resetujący hasło",
     "Settings": "Ustawienia",
     "Share": "Udostępnij",
     "Sort by": "Sortuj według",
+    "Status": "",
     "Stay Updated": "",
-    "Subscribe": "",
+    "Subscribe": "Subskrybuj",
     "System": "Systemowy",
     "Tag": "Tag",
     "Tags": "Tagi",
-    "Technical Skills": "",
+    "Technical Skills": "Umiejętności techniczne",
+    "This action cannot be undone. This will permanently delete this category.": "Tej akcji nie można cofnąć. To trwale usunie tę kategorię.",
+    "This action cannot be undone. This will permanently delete this post.": "Tej akcji nie można cofnąć. To trwale usunie ten post.",
+    "This action cannot be undone. This will permanently delete this tag.": "Tej akcji nie można cofnąć. To trwale usunie ten tag.",
+    "Title": "Tytuł",
     "Title A-Z": "Tytuł A-Z",
     "Title Z-A": "Tytuł Z-A",
     "Toggle navigation": "Przełącz nawigację",
     "Toggle theme": "Przełącz motyw",
     "Updated at": "Zaktualizowano",
-    "View all": "",
+    "View all": "Pokaż wszystkie",
+    "You have not created any tags yet.": "Nie utworzyłeś jeszcze żadnych tagów.",
     "auth.failed": "Błędne dane logowania.",
     "auth.password": "Podane hasło jest nieprawidłowe.",
     "auth.throttle": "Za dużo prób logowania. Spróbuj ponownie za :seconds sekund.",
