--- a/lang/en.json
+++ b/lang/en.json
@@ -1,16 +1,28 @@
 {
     "A reset link will be sent if the account exists.": "A reset link will be sent if the account exists.",
     "About me": "About me",
+    "Actions": "Actions",
     "Appearance": "Appearance",
+    "Are you sure?": "Are you sure?",
     "Back to all Categories": "Back to all Categories",
+    "Back to all Tags": "Back to all Tags",
     "Back to all posts": "Back to all posts",
+    "Blog Categories": "Blog Categories",
+    "Blog Posts": "Blog Posts",
+    "Blog Tags": "Blog Tags",
+    "Cancel": "Cancel",
     "Categories": "Categories",
+    "Category": "Category",
     "Category created successfully": "Category created successfully",
     "Category deleted successfully": "Category deleted successfully",
     "Category updated successfully": "Category updated successfully",
     "Contact Me": "Contact Me",
+    "Content": "Content",
     "Create Category": "Create Category",
     "Create Post": "Create Post",
+    "Create Tag": "Create Tag",
+    "Created": "Created",
+    "Delete": "Delete",
     "Enter your email": "Enter your email",
     "Featured Articles": "Featured Articles",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
@@ -18,27 +30,43 @@
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "Latest": "Latest",
     "Log out": "Log out",
+    "Manage Categories": "Manage Categories",
+    "Manage Posts": "Manage Posts",
+    "Manage Tags": "Manage Tags",
     "Next": "Next",
     "No posts found": "No posts found",
+    "No tags found": "No tags found",
     "Oldest": "Oldest",
     "Page": "Page",
     "Panel": "Panel",
     "Password": "Password",
+    "Pick a date": "Pick a date",
     "Posts": "Posts",
     "Previous": "Previous",
     "Professional Journey": "Professional Journey",
     "Profile": "Profile",
+    "Publish at": "Publish at",
     "Read more": "Read more",
     "Read the Blog": "Read the Blog",
+    "Save Category": "Save Category",
+    "Save Post": "Save Post",
+    "Save Tag": "Save Tag",
     "Search posts...": "Search posts...",
+    "Select a category": "Select a category",
     "Sort by": "Sort by",
+    "Status": "Status",
     "Stay Updated": "Stay Updated",
     "Subscribe": "Subscribe",
     "Tags": "Tags",
     "Technical Skills": "Technical Skills",
+    "This action cannot be undone. This will permanently delete this category.": "This action cannot be undone. This will permanently delete this category.",
+    "This action cannot be undone. This will permanently delete this post.": "This action cannot be undone. This will permanently delete this post.",
+    "This action cannot be undone. This will permanently delete this tag.": "This action cannot be undone. This will permanently delete this tag.",
+    "Title": "Title",
     "Title A-Z": "Title A-Z",
     "Title Z-A": "Title Z-A",
     "View all": "View all",
+    "You have not created any tags yet.": "You have not created any tags yet.",
     "auth.failed": "auth.failed",
     "auth.password": "auth.password",
     "auth.throttle": "auth.throttle",
