[Feat] Update lang

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,6 +16,7 @@
     "Category created successfully": "Category created successfully",
     "Category deleted successfully": "Category deleted successfully",
     "Category updated successfully": "Category updated successfully",
+    "Comments": "Comments",
     "Contact Me": "Contact Me",
     "Content": "Content",
     "Create Category": "Create Category",
@@ -25,10 +26,12 @@
     "Delete": "Delete",
     "Enter your email": "Enter your email",
     "Featured Articles": "Featured Articles",
+    "Forgot password?": "Forgot password?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
     "Home": "Home",
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
     "Latest": "Latest",
+    "Log in to your account": "Log in to your account",
     "Log out": "Log out",
     "Manage Categories": "Manage Categories",
     "Manage Posts": "Manage Posts",
@@ -56,6 +59,7 @@
     "Sort by": "Sort by",
     "Status": "Status",
     "Stay Updated": "Stay Updated",
+    "Submit Comment": "Submit Comment",
     "Subscribe": "Subscribe",
     "Tags": "Tags",
     "Technical Skills": "Technical Skills",
