--- a/lang/pl.json
+++ b/lang/pl.json
@@ -17,6 +17,7 @@
     "Category created successfully": "Kategoria została pomyślnie utworzona",
     "Category deleted successfully": "Kategoria została pomyślnie usunięta",
     "Category updated successfully": "Kategoria została pomyślnie zaktualizowana",
+    "Comments": "",
     "Confirm Password": "Potwierdź hasło",
     "Contact Me": "",
     "Content": "",
@@ -31,6 +32,7 @@
     "Email": "Email",
     "Enter your email": "",
     "Featured Articles": "Artykuły wyróżnione",
+    "Forgot password?": "",
     "Forgot your password?": "Zapomniałeś hasła?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "",
     "Home": "Strona główna",
@@ -38,6 +40,7 @@
     "Latest": "Najnowsze",
     "Light": "Jasny",
     "Link copied!": "Link skopiowany!",
+    "Log in to your account": "Zaloguj się do swojego konta",
     "Log out": "Wyloguj się",
     "Login": "Zaloguj się",
     "Logout": "Wyloguj się",
@@ -77,6 +80,7 @@
     "Sort by": "Sortuj według",
     "Status": "",
     "Stay Updated": "",
+    "Submit Comment": "",
     "Subscribe": "Subskrybuj",
     "System": "Systemowy",
     "Tag": "Tag",
