--- a/lang/de.json
+++ b/lang/de.json
@@ -14,11 +14,10 @@
     "Cancel": "Abbrechen",
     "Categories": "Kategorien",
     "Category": "Kategorie",
-    "Category created successfully": "Kategorie erfolgreich erstellt",
-    "Category deleted successfully": "Kategorie erfolgreich gelöscht",
     "Category created successfully": "",
     "Category deleted successfully": "",
     "Category updated successfully": "",
+    "Comments": "",
     "Confirm Password": "Passwort bestätigen",
     "Contact Me": "",
     "Content": "",
@@ -33,6 +32,7 @@
     "Email": "E-Mail",
     "Enter your email": "",
     "Featured Articles": "Ausgewählte Artikel",
+    "Forgot password?": "",
     "Forgot your password?": "Passwort vergessen?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "",
     "Home": "",
@@ -40,6 +40,7 @@
     "Latest": "Neueste",
     "Light": "Hell",
     "Link copied!": "Link kopiert!",
+    "Log in to your account": "",
     "Log out": "",
     "Login": "Anmelden",
     "Logout": "Abmelden",
@@ -79,6 +80,7 @@
     "Sort by": "Sortieren nach",
     "Status": "",
     "Stay Updated": "",
+    "Submit Comment": "",
     "Subscribe": "",
     "System": "System",
     "Tag": "Tag",
